UI: fix card hight and tags on tablet

--- a/components/UI/ProjectCard/ProjectCard.module.css
+++ b/components/UI/ProjectCard/ProjectCard.module.css
@@ -169,7 +169,7 @@
   }
 
   .projectCard {
-    min-height: 759px;
+    min-height: 753px;
   }
 }
 
